--- a/ZhiFan-Customer/ZhiFan-Customer.vcxproj.filters
+++ b/ZhiFan-Customer/ZhiFan-Customer.vcxproj.filters
@@ -49,6 +49,9 @@
       <Extensions>h</Extensions>
       <ParseFiles>true</ParseFiles>
     </Filter>
+    <Filter Include="entity">
+      <UniqueIdentifier>{1d34a536-4a83-4b01-87f3-21c06fb7bda8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="network\InstantiationPacketHelper.cpp">
@@ -237,6 +240,42 @@
     <ClCompile Include="widgets\SearchWidget.cpp">
       <Filter>widgets</Filter>
     </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_NetworkDataWorker.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_NetworkDataWorker.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="network\Network.cpp">
+      <Filter>network</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_Network.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_Network.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="network\NetworkDataWorker.cpp">
+      <Filter>network</Filter>
+    </ClCompile>
+    <ClCompile Include="entity\UserEntity.cpp">
+      <Filter>entity</Filter>
+    </ClCompile>
+    <ClCompile Include="entity\UserCenterEntity.cpp">
+      <Filter>entity</Filter>
+    </ClCompile>
+    <ClCompile Include="entity\Entity.cpp">
+      <Filter>entity</Filter>
+    </ClCompile>
+    <ClCompile Include="entity\PublishOneEntity.cpp">
+      <Filter>entity</Filter>
+    </ClCompile>
+    <ClCompile Include="entity\PublishBriefOneEntity.cpp">
+      <Filter>entity</Filter>
+    </ClCompile>
+    <ClCompile Include="entity\Factory.cpp">
+      <Filter>entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="network\InstantiationPacketHelper.h">
@@ -262,6 +301,24 @@
     </ClInclude>
     <ClInclude Include="code\ClientDataStructure_defs.h">
       <Filter>code</Filter>
+    </ClInclude>
+    <ClInclude Include="entity\Entity.h">
+      <Filter>entity</Filter>
+    </ClInclude>
+    <ClInclude Include="entity\UserEntity.h">
+      <Filter>entity</Filter>
+    </ClInclude>
+    <ClInclude Include="entity\UserCenterEntity.h">
+      <Filter>entity</Filter>
+    </ClInclude>
+    <ClInclude Include="entity\PublishOneEntity.h">
+      <Filter>entity</Filter>
+    </ClInclude>
+    <ClInclude Include="entity\PublishBriefOneEntity.h">
+      <Filter>entity</Filter>
+    </ClInclude>
+    <ClInclude Include="entity\Factory.h">
+      <Filter>entity</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -342,6 +399,12 @@
     </CustomBuild>
     <CustomBuild Include="widgets\SearchWidget.h">
       <Filter>widgets</Filter>
+    </CustomBuild>
+    <CustomBuild Include="network\Network.h">
+      <Filter>network</Filter>
+    </CustomBuild>
+    <CustomBuild Include="network\NetworkDataWorker.h">
+      <Filter>network</Filter>
     </CustomBuild>
   </ItemGroup>
 </Project>
